--- a/example/src/App.css
+++ b/example/src/App.css
@@ -1,45 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-/*--------------------
-Mixins
---------------------*/
 /*--------------------
 Body
 --------------------*/
@@ -75,6 +33,20 @@ body {
   filter: blur(80px);
   -webkit-transform: scale(1.2);
   transform: scale(1.2);
+}
+
+/*--------------------
+Login
+---------------------*/
+.login-button {
+  background: #2196f3;
+  border: 0;
+  color: white;
+  font-size: 12px;
+  border-radius: 4px;
+  padding: 0 10px;
+  margin: 0 auto;
+  cursor: pointer;
 }
 
 /*--------------------
