--- a/packages/sdk/examples/react/src/App.css
+++ b/packages/sdk/examples/react/src/App.css
@@ -317,6 +317,20 @@ Messages
   animation-delay: 0.3s;
 }
 
+.stop-chatting-button {
+  color: #fff;
+  border: none;
+  background: #e91e63;
+  font-size: 10px;
+  text-transform: uppercase;
+  line-height: 1;
+  padding: 6px 10px;
+  border-radius: 10px;
+  outline: none !important;
+  transition: background 0.2s ease;
+  cursor: pointer;
+}
+
 /*--------------------
 Message Box
 --------------------*/
