--- a/packages/sdk/examples/react/src/App.css
+++ b/packages/sdk/examples/react/src/App.css
@@ -152,15 +152,21 @@ Messages
 
 .message-heart-container {
   position: absolute;
-  right: -40px;
+  right: -85px;
   top: 4px;
   display: flex;
   align-items: center;
+  width: 87px;
+}
+
+.message-moderator-button {
+  margin-left: 10px;
+  cursor: pointer;
 }
 
 .message-personal .message-heart-container {
   right: auto;
-  left: -40px;
+  left: -90px;
   flex-direction: row-reverse;
 }
 
