--- a/sdk-doc/src/pages/index.module.css
+++ b/sdk-doc/src/pages/index.module.css
@@ -4,10 +4,16 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
+  padding: 6rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
+}
+
+.customHeroTitle {
+  max-width: 940px;
+  text-align: left;
+  font-size: 4rem;
 }
 
 @media screen and (max-width: 996px) {
